Linking the instance of a collection crashes Blender #61683

Closed
opened 2019-02-18 18:25:20 +01:00 by Sebastian Koenig · 8 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX 1080

Blender Version
Broken: 2.80, aed631fa47
Worked: 2.79b

Short description of error
I have two blendfiles, Scene_A and Scene B.
In Scene_A I added a monkey and moved it to a new collection, called "Suzanne".
Then I added a collection instance of Suzanne to the scene, called "suzanne_instance".
Then I saved the file.
Now, in a new file, I try to link in the object "suzanne_instance" -> Blender crashes.

Exact steps for others to reproduce the error
Download Scene_A: scene_A.blend

Download Scene_B: scene_B.blend

If you open Scene_B and try to link in the object "suzanne_instance" from Scene_A Blender crashes.
In theory you could also just use the default startup file instead of Scene_B.

If I try the same but instead of a monkey I try it with the default cube I do not get a crash. I assume it is because the mesh "Cube" is already present in the default scene, hence it is present in SceneB, and so Blender finds a mesh with the same name it tries to instance, is happy and does not crash.

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX 1080 **Blender Version** Broken: 2.80, aed631fa4779 Worked: 2.79b **Short description of error** I have two blendfiles, Scene_A and Scene B. In Scene_A I added a monkey and moved it to a new collection, called "Suzanne". Then I added a collection instance of Suzanne to the scene, called "suzanne_instance". Then I saved the file. Now, in a new file, I try to link in the object "suzanne_instance" -> Blender crashes. **Exact steps for others to reproduce the error** Download Scene_A: [scene_A.blend](https://archive.blender.org/developer/F6651277/scene_A.blend) Download Scene_B: [scene_B.blend](https://archive.blender.org/developer/F6651280/scene_B.blend) If you open Scene_B and try to link in the object "suzanne_instance" from Scene_A Blender crashes. In theory you could also just use the default startup file instead of Scene_B. If I try the same but instead of a monkey I try it with the default cube I do not get a crash. I assume it is because the mesh "Cube" is already present in the default scene, hence it is present in SceneB, and so Blender finds a mesh with the same name it tries to instance, is happy and does not crash.
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Are you even supposed to be able to instance an instance?

Are you even supposed to be able to instance an instance?
Author
Member

Why wouldn't I be? It works just fine in 2.79.
Usecase:
Usually I have my main scene with main geometry for the building etc., which instances objects like furniture and props from single files.
Now I want to have a second file with a variation of that scene, but some props should be linked from the first scene to the second scene, so that those objects are always in sync and share the same position, rotation etc. . It should actually be not a big deal to do that.

Why wouldn't I be? It works just fine in 2.79. Usecase: Usually I have my main scene with main geometry for the building etc., which instances objects like furniture and props from single files. Now I want to have a second file with a variation of that scene, but some props should be linked from the first scene to the second scene, so that those objects are always in sync and share the same position, rotation etc. . It should actually be not a big deal to do that.

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Bastien Montagne was assigned by Sebastian Parborg 2019-02-19 11:51:30 +01:00

Backtrace:

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=collection@entry=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408, flag=flag@entry=0,
    add_us=add_us@entry=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:489
489			if (collection_find_child_recursive(ob->instance_collection, collection)) {
(gdb) bt
#0  collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=collection@entry=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408, flag=flag@entry=0,
    add_us=add_us@entry=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:489
#1  0x0000555556855d51 in BKE_collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408)
    at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:550
#2  0x00005555567a9310 in link_object_postprocess (flag=1078, v3d=0x0, view_layer=0x7fffccb21d08, scene=0x7fffceacc008, bmain=0x7fffcebe0808,
    id=0x7fffccb64408) at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10516
#3  link_named_part_ex (v3d=0x0, view_layer=0x7fffccb21d08, scene=0x7fffceacc008, bmain=0x7fffcebe0808, flag=1078, name=<optimized out>,
    idcode=<optimized out>, fd=<optimized out>, mainl=mainl@entry=0x7fffcebdf308)
    at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10577
#4  BLO_library_link_named_part_ex (mainl=mainl@entry=0x7fffcebdf308, bh=bh@entry=0x7fffffffc7f0, idcode=<optimized out>, name=<optimized out>,
    flag=flag@entry=1078, bmain=bmain@entry=0x7fffcebe0808, scene=0x7fffceacc008, view_layer=0x7fffccb21d08, v3d=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10621
#5  0x000055555613728d in wm_link_do (lapp_data=lapp_data@entry=0x7fffd8620010, reports=0x7fffe9662d98, bmain=bmain@entry=0x7fffcebe0808,
    scene=scene@entry=0x7fffceacc008, view_layer=view_layer@entry=0x7fffccb21d08, v3d=0x0)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files_link.c:256
#6  0x0000555556138574 in wm_link_append_exec (C=0x7fffea058108, op=<optimized out>)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files_link.c:445
#7  0x000055555610fb90 in wm_handler_fileselect_do (C=C@entry=0x7fffea058108, handlers=handlers@entry=0x7fffccbf7120, handler=handler@entry=0x7fffccbce088,
    val=2) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2219
#8  0x0000555556112514 in wm_handler_fileselect_call (event=0x7fffce9a3808, handler=0x7fffccbce088, handlers=0x7fffccbf7120, C=0x7fffea058108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2307
#9  wm_handlers_do_intern (C=C@entry=0x7fffea058108, event=event@entry=0x7fffce9a3808, handlers=handlers@entry=0x7fffccbf7120)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2438
#10 0x0000555556112c4c in wm_handlers_do (C=C@entry=0x7fffea058108, event=event@entry=0x7fffce9a3808, handlers=handlers@entry=0x7fffccbf7120)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2655
#11 0x000055555611342d in wm_event_do_handlers (C=C@entry=0x7fffea058108)
    at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3046
- 12 0x000055555610a8f0 in WM_main (C=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418
- 13 0x00005555560f5453 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505
Backtrace: ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=collection@entry=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408, flag=flag@entry=0, add_us=add_us@entry=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:489 489 if (collection_find_child_recursive(ob->instance_collection, collection)) { (gdb) bt #0 collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=collection@entry=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408, flag=flag@entry=0, add_us=add_us@entry=true) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:489 #1 0x0000555556855d51 in BKE_collection_object_add (bmain=bmain@entry=0x7fffcebe0808, collection=0x7fffcee741c8, ob=ob@entry=0x7fffccb64408) at /home/zed/programmering/blender_master/blender/source/blender/blenkernel/intern/collection.c:550 #2 0x00005555567a9310 in link_object_postprocess (flag=1078, v3d=0x0, view_layer=0x7fffccb21d08, scene=0x7fffceacc008, bmain=0x7fffcebe0808, id=0x7fffccb64408) at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10516 #3 link_named_part_ex (v3d=0x0, view_layer=0x7fffccb21d08, scene=0x7fffceacc008, bmain=0x7fffcebe0808, flag=1078, name=<optimized out>, idcode=<optimized out>, fd=<optimized out>, mainl=mainl@entry=0x7fffcebdf308) at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10577 #4 BLO_library_link_named_part_ex (mainl=mainl@entry=0x7fffcebdf308, bh=bh@entry=0x7fffffffc7f0, idcode=<optimized out>, name=<optimized out>, flag=flag@entry=1078, bmain=bmain@entry=0x7fffcebe0808, scene=0x7fffceacc008, view_layer=0x7fffccb21d08, v3d=0x0) at /home/zed/programmering/blender_master/blender/source/blender/blenloader/intern/readfile.c:10621 #5 0x000055555613728d in wm_link_do (lapp_data=lapp_data@entry=0x7fffd8620010, reports=0x7fffe9662d98, bmain=bmain@entry=0x7fffcebe0808, scene=scene@entry=0x7fffceacc008, view_layer=view_layer@entry=0x7fffccb21d08, v3d=0x0) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files_link.c:256 #6 0x0000555556138574 in wm_link_append_exec (C=0x7fffea058108, op=<optimized out>) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_files_link.c:445 #7 0x000055555610fb90 in wm_handler_fileselect_do (C=C@entry=0x7fffea058108, handlers=handlers@entry=0x7fffccbf7120, handler=handler@entry=0x7fffccbce088, val=2) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2219 #8 0x0000555556112514 in wm_handler_fileselect_call (event=0x7fffce9a3808, handler=0x7fffccbce088, handlers=0x7fffccbf7120, C=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2307 #9 wm_handlers_do_intern (C=C@entry=0x7fffea058108, event=event@entry=0x7fffce9a3808, handlers=handlers@entry=0x7fffccbf7120) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2438 #10 0x0000555556112c4c in wm_handlers_do (C=C@entry=0x7fffea058108, event=event@entry=0x7fffce9a3808, handlers=handlers@entry=0x7fffccbf7120) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:2655 #11 0x000055555611342d in wm_event_do_handlers (C=C@entry=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm_event_system.c:3046 - 12 0x000055555610a8f0 in WM_main (C=0x7fffea058108) at /home/zed/programmering/blender_master/blender/source/blender/windowmanager/intern/wm.c:418 - 13 0x00005555560f5453 in main (argc=1, argv=0x7fffffffdd28) at /home/zed/programmering/blender_master/blender/source/creator/creator.c:505 ```

This issue was referenced by cba447966e

This issue was referenced by cba447966ec51db48459e57d838e8b4562b96c5e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61683
No description provided.