source/blender/blenloader/BLO_readfile.h
@@ -133,8 +133,7 @@ struct Main *BLO_library_link_begin(struct Main *mainvar, BlendHandle **bh, cons
 struct ID *BLO_library_link_named_part(struct Main *mainl, BlendHandle **bh, const short idcode, const char *name);
 struct ID *BLO_library_link_named_part_ex(
         struct Main *mainl, BlendHandle **bh,
-        const short idcode, const char *name, const int flag,
-        struct Main *bmain, struct Scene *scene, struct ViewLayer *view_layer, const struct View3D *v3d);
+        const short idcode, const char *name, const int flag);
 void BLO_library_link_end(
         struct Main *mainl, BlendHandle **bh, int flag,
         struct Main *bmain, struct Scene *scene, struct ViewLayer *view_layer, const struct View3D *v3d);
